# M.Y.-Engineering-and-Technologies

./: .gitignore  .replit  404.html  PLATFORM_ACCESS.md  POWERFLOW_QUICKSTART.md  about.html  compliance.html  cybersecurity-dashboard.html  cybersecurity-training.html  cybersecurity.html  enhanced-navigation.html  hardware.html  index.html  orion-dashboard.html  orion-demo.html  orion.html  powerflow-ev-charging.html  powerflow.html  professional-footer.html  start-servers.sh
_old_site/: careers.html  contact.html  (+12 more)
power-platform/backend/: .gitignore  alembic.ini  power_platform.db  pyproject.toml  requirements.txt
power-platform/backend/app/: config.py  deps.py  main.py  seed.py
power-platform/backend/app/api/routes/: auth.py  compliance.py  files.py  orgs.py  projects.py  reports.py  runs.py  users.py  websocket.py
power-platform/backend/app/db/: models.py  seed.py  session.py
power-platform/backend/app/migrations/: env.py
power-platform/backend/app/migrations/versions/: a556b0a2d2e8_initial_database_schema.py
power-platform/backend/app/services/compliance/: rules_engine.py
power-platform/backend/app/services/hil/: base.py  mock_hil.py  modbus_tcp.py  ni_crio_stub.py  opcua_adapter.py  udp_stream.py
power-platform/backend/app/services/reporting/: pdf.py
power-platform/backend/app/tests/: conftest.py  test_api.py  test_dab.py  test_devices.py  test_rules.py  test_zvs.py
power-platform/backend/app/workers/: celery_app.py  tasks.py
power-platform/backend/scripts/: init_db.py  seed_demo.py
power-platform/backend/tests/: test_dab.py  test_zvs.py
(+277 files in other folders)
